# Cognition-in-BFMs

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: FINETUNING_ROADMAP.md
models/: __init__.py
models/brainjepa/: __init__.py  inference.py  vision_transformer.py
models/brainjepa/src/utils/: tensors.py
models/brainlm/: __init__.py  inference.py
preprocessing/: __init__.py
preprocessing/brainjepa/: __init__.py  preprocess_brainjepa.py
preprocessing/brainlm/: __init__.py  preprocess_fmri_for_brainlm.py
preprocessing/ooi_baseline/: __init__.py  preprocess_ooi_baseline.py
scripts/: __init__.py
scripts/data_preparation/: __init__.py  batch_download_preprocess_ooi.py  download_and_preprocess_ooi.py  download_aomic_fmri.py  download_brainjepa_atlases.py  download_large_scale_data.py  extract_all_features.py  extract_brainjepa_features.py  extract_brainlm_features.py  extract_embeddings.py  prepare_aomic_cognition.py  preprocess_local_ooi.py  stream_download_preprocess.py  stream_download_preprocess_brainjepa.py  stream_download_preprocess_ooi.py  utils.py
scripts/evaluation/: __init__.py  analyze_results.py  compare_cognition_prediction.py  run_cognition_prediction.py  run_extended_embedding_analysis.py  run_ooi_baseline.py  run_reconstruction_eval.py
scripts/preprocessing/: __init__.py  preprocess_brainlm.py
scripts/training/: finetune_brainlm.py
tests/: __init__.py  test_cognition.py  test_experiment_metadata.py  test_regression.py
training/: __init__.py
training/brainlm/: __init__.py  dataset.py  losses.py  models.py  trainer.py
utils/: __init__.py  cognition.py  metrics.py
